# slicetools

./: LICENSE  README.md  pyproject.toml
slicetools/: __init__.py  slicetools.py
src/: slicetools.py
tests/: test_slicetools.py
