[project]
name = "slicetools"
version = "1.0.0"
authors = [{ name="Liam Adams" },]
description = "A collection of transforms for Python slice objects."
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/l90lpa/slicetools"
Issues = "https://github.com/l90lpa/slicetools/issues"

[build-system]
requires = [
  "hatchling"
]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests",]

[tool.hatch.metadata]
allow-direct-references = true
